Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo
Chris Caudle
John Emmas

---------------------------
  Jackdmp changes log
---------------------------

2012-01-20 Stephane Letz  <letz@grame.fr>

	* Experimental system port alias use in WIndows JackRouter.

2012-01-19 Stephane Letz  <letz@grame.fr>

	* Implement shutdown for in server clients.
	* Better time-out management in NetJack2.

2012-01-13 Stephane Letz  <letz@grame.fr>

	* More robust server/client protocol.

2012-01-11 Stephane Letz  <letz@grame.fr>

	* Factorize code the server/client request in JackRequestDecoder class.

2012-01-06 Stephane Letz  <letz@grame.fr>

	* Cleanup drivers and internals loading code.
	* jackctl_driver_params_parse API moved in public control.h.
	* More general drivers/internals loading model on Windows.

2012-01-06 Stephane Letz  <letz@grame.fr>

	* Fix for compilation on Solaris.

2012-01-04 Stephane Letz  <letz@grame.fr>

	* Fix library symbols export issue.

2012-01-02 Stephane Letz  <letz@grame.fr>

	* Adrian Knoth fix in midiseq.c.

2011-12-20 Stephane Letz  <letz@grame.fr>

	* Version 1.9.9 started. 

2011-11-25 Stephane Letz  <letz@grame.fr>

	* More robust dynamic port management in JACK/CoreMidi bridge.
	* Correct jack_port_name_size API.

2011-11-24 Stephane Letz  <letz@grame.fr>

	* Dynamic port management in JACK/CoreMidi bridge.
	* Correct jack_client_create_thread (when realtime in on).

2011-11-21 Stephane Letz  <letz@grame.fr>

	* John Emmas third auto-launch server on Windows patch.

2011-11-07 Stephane Letz  <letz@grame.fr>

	* John Emmas first auto-launch server on Windows patch.
	* John Emmas second auto-launch server on Windows patch.

2011-11-06 Stephane Letz  <letz@grame.fr>

	* Enable local access in NetJack2 code.
