@@ -59,7 +59,6 @@ SERVER_EXPORT JackSynchro* GetSynchroTable()
 JackInternalClient::JackInternalClient(JackServer* server, JackSynchro* table): JackClient(table)
 {
     fChannel = new JackInternalClientChannel(server);
-    //fChannel = new JackGenericClientChannel();
 }
 
 JackInternalClient::~JackInternalClient()
@@ -104,6 +103,12 @@ int JackInternalClient::Open(const char* server_name, const char* name, int uuid
 error:
     fChannel->Close();
     return -1;
+}
+
+void JackInternalClient::ShutDown()
+{
+    jack_log("JackInternalClient::ShutDown");
+    JackClient::ShutDown();
 }
 
 JackGraphManager* JackInternalClient::GetGraphManager() const
@@ -196,10 +201,12 @@ JackLoadableInternalClient2::JackLoadableInternalClient2(JackServer* server, Jac
 
 JackLoadableInternalClient::~JackLoadableInternalClient()
 {
-    if (fFinish != NULL)
+    if (fFinish != NULL) {
         fFinish(fProcessArg);
-    if (fHandle != NULL)
+    }
+    if (fHandle != NULL) {
         UnloadJackModule(fHandle);
+    }
 }
 
 int JackLoadableInternalClient1::Open(const char* server_name, const char* name, int uuid, jack_options_t options, jack_status_t* status)
