@@ -47,6 +47,7 @@ class JackInternalClient : public JackClient
         virtual ~JackInternalClient();
 
         int Open(const char* server_name, const char* name, int uuid, jack_options_t options, jack_status_t* status);
+        void ShutDown();
 
         JackGraphManager* GetGraphManager() const;
         JackEngineControl* GetEngineControl() const;
