@@ -36,6 +36,11 @@ John Emmas
   Jackdmp changes log
 ---------------------------
 
+2012-01-24 Stephane Letz  <letz@grame.fr>
+
+	* Improve ShutDown in NetManager
+	* Correct ShutDown in JackInternalClient and JackLibClient.
+
 2012-01-20 Stephane Letz  <letz@grame.fr>
 
 	* Experimental system port alias use in WIndows JackRouter.
